--- a/html/publicFacing.html
+++ b/html/publicFacing.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>pageName | siteName</title>
+    <!-- Meta Items-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><!--[if lt IE 7]>
     <meta http-equiv="refresh" content="0;url=http://browsehappy.com/"/><![endif]--><!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
@@ -25,6 +26,14 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/path/to/apple/images/apple114.png"/>
     <link rel="apple-touch-icon" sizes="144x144" href="/path/to/apple/images/apple144.png"/>
     <meta id="viewport" name="viewport" content="width:1000"/>
+    <!-- Mobile-->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <link rel="apple-touch-icon" href="/path/to/icons/apple57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/path/to/icons/apple72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/path/to/icons/apple114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="/path/to/icons/apple144.png"/>
+    <meta id="viewport" name="viewport" content="width:1000"/>
+    <!-- Google Analytics -->
     <script type="text/javascript">
       var _gaq = [['_setAccount', 'XX-XXXXX-XX'], ['_trackPageview']];
       (function(d, t){
