facebook parsed out

--- a/html/publicFacing.html
+++ b/html/publicFacing.html
@@ -16,16 +16,6 @@
     <meta name="description" content="page description"/>
     <meta name="designer" content="Isaac Shapira"/>
     <meta name="copyright" content="some company copyright:2013"/>
-    <meta property="og:title" content="title for facebook"/>
-    <meta property="og:description" content="description html for facebook"/>
-    <meta property="og:image" content="/path/to/img.jpg"/>
-    <link rel="image_src" content="/path/to/img.jpg"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-    <link rel="apple-touch-icon" href="/path/to/apple/images/apple57.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="/path/to/apple/images/apple72.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="/path/to/apple/images/apple114.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="/path/to/apple/images/apple144.png"/>
-    <meta id="viewport" name="viewport" content="width:1000"/>
     <!-- Mobile-->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <link rel="apple-touch-icon" href="/path/to/icons/apple57.png"/>
@@ -33,6 +23,11 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/path/to/icons/apple114.png"/>
     <link rel="apple-touch-icon" sizes="144x144" href="/path/to/icons/apple144.png"/>
     <meta id="viewport" name="viewport" content="width:1000"/>
+    <!-- facebook-->
+    <meta property="og:title" content="title for facebook"/>
+    <meta property="og:description" content="description html for facebook"/>
+    <meta property="og:image" content="path/to/image.jpg"/>
+    <link rel="image_src" content="path/to/image.jpg"/>
     <!-- Google Analytics -->
     <script type="text/javascript">
       var _gaq = [['_setAccount', 'XX-XXXXX-XX'], ['_trackPageview']];
@@ -44,4 +39,7 @@
       }(document, 'script'));
     </script>
   </head>
+  <body itemscope="itemscope" itemtype="http://schema.org/WebPage">
+    <!-- content-->
+  </body>
 </html>
