--- a/html/publicFacing.html
+++ b/html/publicFacing.html
@@ -30,7 +30,7 @@
     <link rel="image_src" content="path/to/image.jpg"/>
     <!-- Google Analytics -->
     <script type="text/javascript">
-      var _gaq = [['_setAccount', 'XX-XXXXX-XX'], ['_trackPageview']];
+      var _gaq = [['_setAccount', 'UA-XXXXX-XX'], ['_trackPageview']];
       (function(d, t){
        var g = d.createElement(t),
        s = d.getElementsByTagName(t)[0];
